--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kevinmwalugha.luggtrak" >
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo"
@@ -23,8 +27,14 @@
         <activity
             android:name=".aboutActivity"
             android:label="@string/title_activity_about"
-            android:parentActivityName="com.kevinmwalugha.luggtrak.MainActivity">
+            android:parentActivityName=".MainActivity" >
         </activity>
+        <activity
+            android:name=".pPosition"
+            android:label="@string/title_activity_p_position" >
+        </activity>
+        <meta-data android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
